# actions-example-python

./: .flake8  .gitignore  mypy.ini  pyproject.toml
.github/workflows/: cicd.yml
actions_example_python/: main.py
tests/: test_actions_example_python.py
